--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -16,10 +16,10 @@
 @syntax-result-marker-color-selected: white;
 
 // Gutter colors
-@syntax-gutter-text-color: @syntax-text-color;
+@syntax-gutter-text-color: darken(@syntax-text-color, %2);
 @syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: lighten(@syntax-background-color, 3%);
-@syntax-gutter-background-color-selected: @syntax-selection-color;
+@syntax-gutter-background-color: transparent;
+@syntax-gutter-background-color-selected: @syntax-gutter-background-color;
 
 // For git diff info. i.e. in the gutter
 @syntax-color-renamed: @light-orange;
