--- a/index.less
+++ b/index.less
@@ -129,7 +129,7 @@ atom-text-editor, :host {
 
 .invalid {
   color: @ghost-white;
-  background-color: @pink;
+  background-color: transparent;
 
   &.deprecated {
     background-color: @purple;
